weston 14 crashes with SIGSEGV during gtk4 test suite
Weston 14 was uploaded in Debian/sid and since then it crashes during gtk4 test suite. This was reported in #1081515.
Here is a backtrace:
[New LWP 1618393]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
Core was generated by `weston --backend=headless-backend.so --socket=wayland-113 --idle-time=0'.
Program terminated with signal SIGSEGV, Segmentation fault.
#0 0x00007f42fd8f8be5 in wl_shm_buffer_get_data () from /lib/x86_64-linux-gnu/libwayland-server.so.0
(gdb) bt full
#0 0x00007f42fd8f8be5 in wl_shm_buffer_get_data () at /lib/x86_64-linux-gnu/libwayland-server.so.0
#1 0x00007f42fd957327 in noop_renderer_attach (pnode=<optimized out>) at ../libweston/noop-renderer.c:97
es = <optimized out>
buffer = 0x558f9273d1b0
renderer = <optimized out>
shm_buffer = 0x0
data = <optimized out>
size = <optimized out>
i = <optimized out>
height = <optimized out>
stride = <optimized out>
unused = 0 '\000'
#2 0x00007f42fd946c1a in paint_node_update_late (pnode=0x558f9273c330) at ../libweston/compositor.c:332
surf = 0x558f9273bf60
vis_dirty = <optimized out>
plane_dirty = <optimized out>
content_dirty = <optimized out>
buffer_dirty = true
surf = <optimized out>
vis_dirty = <optimized out>
plane_dirty = <optimized out>
content_dirty = <optimized out>
buffer_dirty = <optimized out>
__PRETTY_FUNCTION__ = "paint_node_update_late"
#3 weston_output_repaint (output=<optimized out>, now=0x7fff0a5a9790) at ../libweston/compositor.c:3785
pnode = 0x558f9273c330
animation = <optimized out>
cnext = <optimized out>
r = <optimized out>
frame_time_msec = <optimized out>
highest_requested = <optimized out>
ec = <optimized out>
next = <optimized out>
cb = <optimized out>
frame_callback_list = {prev = 0x0, next = 0x28000000400}
ec = <optimized out>
pnode = <optimized out>
animation = <optimized out>
next = <optimized out>
cb = <optimized out>
cnext = <optimized out>
frame_callback_list = {prev = <optimized out>, next = <optimized out>}
r = <optimized out>
frame_time_msec = <optimized out>
highest_requested = <optimized out>
__PRETTY_FUNCTION__ = "weston_output_repaint"
tmp___ = <optimized out>
tmp___ = <optimized out>
#4 output_repaint_timer_handler (data=0x558f927129a0) at ../libweston/compositor.c:3988
compositor = 0x558f927129a0
backend = <optimized out>
output = <optimized out>
now = {tv_sec = 1651551, tv_nsec = 89727725}
ret = <optimized out>
#5 0x00007f42fd8f9c4f in wl_event_loop_dispatch () at /lib/x86_64-linux-gnu/libwayland-server.so.0
#6 0x00007f42fd8f74c5 in wl_display_run () at /lib/x86_64-linux-gnu/libwayland-server.so.0
#7 0x00007f42fdb96eb2 in wet_main () at /usr/lib/x86_64-linux-gnu/weston/libexec_weston.so.0
#8 0x00007f42fd9b8dba in __libc_start_call_main (main=main@entry=0x558f7141e050, argc=argc@entry=5, argv=argv@entry=0x7fff0a5aa448) at ../sysdeps/nptl/libc_start_call_main.h:58
self = <optimized out>
result = <optimized out>
unwind_buf = {cancel_jmp_buf = {{jmp_buf = {140733367100488, -8995727586356845932, 0, 140733367100536, 139925701668864, 94074568838560, 8995612458023297684, 9055958596649132692}, mask_was_saved = 0}}, priv = {pad = {0x0, 0x0, 0x7fff0a5aa448, 0x5}, data = {prev = 0x0, cleanup = 0x0, canceltype = 173712456}}}
not_first_call = <optimized out>
#9 0x00007f42fd9b8e75 in __libc_start_main_impl (main=0x558f7141e050, argc=5, argv=0x7fff0a5aa448, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff0a5aa438) at ../csu/libc-start.c:360
#10 0x0000558f7141e081 in ??? ()