libweston/noop-renderer: Check shm_buffer for NULL

Copy the check from the pixman renderer.

Fixes: https://gitlab.freedesktop.org/wayland/weston/-/issues/953
Signed-off-by: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
(cherry picked from commit 0e451e8dc38b1539e6e2b0ae6f5c871d3edab70a)